--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,19 @@
     <string name="click_me_every_time_you_breathe">Breathe</string>
     <string name="_0">0</string>
     <string name="one_helpful_method_for_stopping_a_panic_attack_is_deep_breathing_however_in_the_moment_this_can_be_very_hard_and_it_can_be_difficult_to_keep_track_of_the_amount_of_times_you_breathe_when_you_feel_a_panic_attack_coming_use_this_counter_to_keep_track_of_your_breaths_and_look_at_geoff_s_face_to_help_you_relax">When you feel a panic attack coming, use this counter to keep track of how many times you breathe.</string>
+
+    <!-- Preference Titles -->
+    <string name="messages_header">Messages</string>
+    <string name="sync_header">Sync</string>
+
+    <!-- Messages Preferences -->
+    <string name="signature_title">Your signature</string>
+    <string name="reply_title">Default reply action</string>
+
+    <!-- Sync Preferences -->
+    <string name="sync_title">Sync email periodically</string>
+    <string name="attachment_title">Download incoming attachments</string>
+    <string name="attachment_summary_on">Automatically download attachments for incoming emails
+    </string>
+    <string name="attachment_summary_off">Only download attachments when manually requested</string>
 </resources>
