--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Mental Health</string>
+    <string name="app_name">My Journal</string>
     <string name="action_settings">Settings</string>
     <string name="RatingDescription">How are you feeling?</string>
     <string name="PositiveDescription">List 3 positive aspects of your day!</string>
